example of an audio tag

--- a/_units/10.md
+++ b/_units/10.md
@@ -43,21 +43,16 @@ In this unit on expectation and anticipation, we will talk about:
 Expectancy is a state of anticipation for the future. While expectancy is commonly conceived as a generalized state, expectation is a more specific sense of having some knowledge or prediction of which events will occur in the near future (e.g. Eerola, 2003). Thus, one can have expectations for which note or chord will come next in a piece of music, but a change in dynamics in music, for example, changes one's expectancy for loud music. 
 
 Some quotes on expectancy, expectation, and anticipation: 
-* “A mind is fundamentally an anticipator, an expectation generator.” Dan Dennett, philosopher. 1996
-* “Expectancy typically refers to an anticipatory orienting of attention.” Mari Reiss Jones, psychologist. 1991
-* “The story of expectation is intertwined with both biology and culture.” David Huron, music cognition researcher. 2004
+* "A mind is fundamentally an anticipator, an expectation generator." Dan Dennett, philosopher. 1996
+* "Expectancy typically refers to an anticipatory orienting of attention." Mari Reiss Jones, psychologist. 1991
+* "The story of expectation is intertwined with both biology and culture." David Huron, music cognition researcher. 2004
 
 Here is an example of three different conditions of expectancy in music. Listen to the following three clips of music. Which one sounds the most expected? Which one sounds most unexpected?
 
-1. {% raw %}
+<audio controls src="/MUTOR/assets/audios/unit10_Cmandemo.wav"></audio>
 {% include img-figure url="/MUTOR/assets/audios/unit10_Cmandemo.wav" description="Cmajor normal" %}
-{% endraw %}
-1. {% raw %}
 {% include img-figure url="/MUTOR/assets/audios/unit10_CmaD3demo.wav" description="Cmajor normal" %}
-{% endraw %}
-1. {% raw %}
 {% include img-figure url="/MUTOR/assets/audios/unit10_CmanD5emo.wav" description="Cmajor normal" %}
-{% endraw %}
 
 # Why do we study expectation?
 
