--- a/_units/12.md
+++ b/_units/12.md
@@ -26,6 +26,9 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Music and Language 
+Music and language are both fundamental to human experience. The two domains, while apparently different, rely on several notable similarities: both exhibit syntactic structure, and both rely on sensory, cognitive, and vocal-motor apparatus of the central nervous system. The nature of this relationship between syntactic structure in language and music, and their underlying neural substrates, is a topic of intense interest to the cognitive and brain sciences community.
+The Shared Syntactic Integration Resource Hypothesis (SSIRH [1]) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure.
+Support for the SSIRH comes from a variety of behavioral and neural studies. 
 Phonology
 Syntax
 Semantics
