--- a/_units/12.md
+++ b/_units/12.md
@@ -27,8 +27,12 @@ mathjax: true
 
 # Music and Language 
 Music and language are both fundamental to human experience. The two domains, while apparently different, rely on several notable similarities: both exhibit syntactic structure, and both rely on sensory, cognitive, and vocal-motor apparatus of the central nervous system. The nature of this relationship between syntactic structure in language and music, and their underlying neural substrates, is a topic of intense interest to the cognitive and brain sciences community.
-The Shared Syntactic Integration Resource Hypothesis (SSIRH [1]) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure.
+The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure.
 Support for the SSIRH comes from a variety of behavioral and neural studies. 
+
+## Evidence for separate processing between music and language 
+In the field of neuropsychology, the double dissociations between amusia and aphasia have been used to claim that music and language do not share common neural substrates. Patel first describes neuroimaging evidence that stands as evidence to the contrary. Second, he points to the fact that several aphasics without amusia are professional musicians whose data cannot be gen- eralized to ordinary individuals. Third, he suggests that musical tests used to verify musical competences are not very sensitive and well refined. Finally, he proposes an explanatory theory to account for discrepancies between neuroimaging and neuropsychological data
+
 Phonology
 Syntax
 Semantics
