--- a/_units/12.md
+++ b/_units/12.md
@@ -30,7 +30,7 @@ Music and language are both fundamental to human experience. The two domains, wh
 The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure.
 Support for the SSIRH comes from a variety of behavioral and neural studies. 
 
-## Evidence for separate processing between music and language 
+## Evidence for shared processing between music and language 
 In the field of neuropsychology, the double dissociations between amusia and aphasia have been used to claim that music and language do not share common neural substrates. Patel first describes neuroimaging evidence that stands as evidence to the contrary. Second, he points to the fact that several aphasics without amusia are professional musicians whose data cannot be gen- eralized to ordinary individuals. Third, he suggests that musical tests used to verify musical competences are not very sensitive and well refined. Finally, he proposes an explanatory theory to account for discrepancies between neuroimaging and neuropsychological data
 
 Phonology
