--- a/_units/00.md
+++ b/_units/00.md
@@ -26,7 +26,7 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Research design & statistics
-How do we know? 
+Music perception and cognition is an interdisciplinary field concerned with applying the methods of cognitive science (experimental, computational, and neurological) — to issues and problems in the study of music. 
 
 ## Designing a research program
 Theory -> Question -> Hypothesis -> Research design -> Data -(back)-> Hypothesis
