--- a/_units/00.md
+++ b/_units/00.md
@@ -57,14 +57,15 @@ One of the major controversies in cognitive science today is whether any existin
 
 But what about perception (cognition, intelligence, or some other aspect of intelligent systems under study by cognitive scientists)? Does a computer model of a perceptual process (say vision) qualify as a simulation or an emulation? For several reasons, it is not obvious what the "correct" answer to this question is. First, if the computer metaphor is literally true, then a computer program that produces the relevant perceptual output would be an emulation of the perceptual process. Second, if the computer metaphor is merely a useful research strategy, then a computer program that produces the relevant perceptual output would only simulate the perceptual process, not emulate it. Third, to complicate matters further, whether the computer metaphor is true depends on the answer to these and other questions about the nature of computation: What does it mean to be a computer? Is your brain literally a computer or something fundamentally different? If your brain is a computer, is it a digital computer (like a Mac or a PC), or is it some other (nonclassical) type of computer? These questions highlight some of the controversies surrounding the widespread use of computers to model and to explain perception.
 
-## Designing a research program
-Theory -> Question -> Hypothesis -> Research design -> Data -(back)-> Hypothesis
+# Designing a research study
+Many factors need to be considered when designing a research study in order to ensure that results are meaningful. When designing a research study, a few factors to decide on are the underlying theory and hypothesis, the research question at hand, the quantity and quality of data needed to produce meaningful results, and the sample size and statistical tests needed to produce meaningful results.
 
-## Variability & Variables
-- The power of sample size
-- The power of repeated measures
+## Sample size and statistical power
+Sample size in psychological research refers to the number of observations (cases, individuals, units) included in a selection of items to be studied. This is usually denoted N (for the study as a whole) or n (for subgroups from the study). The sample size needed for a study can be estimated from a measure of statistical power, which is how effective a statistical procedure is at identifying real differences between populations. Power ranges from 0 to 1, with values of .80 or above generally considered acceptable. 
 
 ## Variables
+The different aspects that can change within an experiment are called *variables*.
+
 *Dependent*: The dependent variable is the aspect of the experiment that is being measured.
 
 *Independent*: The independent variable is the aspect of the experiment that is being manipulated 
