--- a/_units/12.md
+++ b/_units/12.md
@@ -3,13 +3,13 @@
 # unit information: 
 # Music and Language 
 ###
-title: Title of the unit
+title: Music and Language
 number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
-topics: [topic 1, topic 2]
+ - Psyche Loui
+topics: [music, language, syntax, prosody]
 test_questions:
  - question 1
  - question 2
