--- a/_units/12.md
+++ b/_units/12.md
@@ -4,7 +4,7 @@
 # Music and Language 
 ###
 title: Music and Language
-number: 0
+number: 11 (12?)
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
