--- a/_units/00.md
+++ b/_units/00.md
@@ -9,10 +9,10 @@ short_description: Research Design and Methods
 summary: Statistics, Quantitative and Qualitative Methods, Ethical principles of interdisciplinary research.
 authors: 
  - Psyche Loui
-topics: [topic 1, topic 2]
+topics: [experimental psychology, neuroscience, computer modeling]
 test_questions:
- - question 1
- - question 2
+ - Suppose you hypothesize that musical harmony is a culturally determined construct. How would you design a study to test this research question?
+ - What are some possible confounds with such a research design, and how could you eliminate as many confounds as possible given the design of your experiment?
 
 ###
 # page layout:
@@ -74,7 +74,7 @@ The different aspects that can change within an experiment are called *variables
 
 *Control*: an aspect of an experiment that is not being manipulated, or is being manipulated differently from the independent variable, in order to increase reliability of the experiment.
 
-*Random*
+*Randomization*
 1. Random sampling - each member of a population is equally likely to be chosen 
 1. Advantage: Generalizability (external validity)
 1. Randomization with replacement
