--- a/_units/12.md
+++ b/_units/12.md
@@ -11,8 +11,8 @@ authors:
  - Psyche Loui
 topics: [music, language, syntax, prosody]
 test_questions:
- - question 1
- - question 2
+ - Describe the N400 effect, and what it reveals about the relationship between music and language.
+ - What does the nPVI measure, and how has it been used to draw comparisons between music and speech?
 
 ###
 # page layout:
@@ -40,14 +40,14 @@ Phonology refers to the sounds of speech and language. Abundant evidence suggest
 # Syntax
 Syntax refers to the ordering of entities to form coherent strings. In language, this refers to the order of words and phrases to form sentences. In music, syntax refers to the ordering of pitches, chords, and rhythms to form melodies and harmonies. The nature of the relationship between syntactic structure in language and music, and their underlying neural substrates, is a topic of intense interest to the cognitive and brain sciences community.
 
-The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure. Support for the SSIRH comes from a variety of behavioral and neural studies (see Patel, 2008 for a review). 
+The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure. Support for the SSIRH comes from a variety of behavioral and neural studies (see Patel, 2008 for a review). One set of findings comes from EEG recordings in humans as they listen to chord progressions that were unexpected given the context, creating a sort of syntax-like violation. These violtaions in musical structure elicit patterns of brain potentials, specially a negative waveform in the frontal recording sites on the head, around 200 ms after the unexpected chord occurred. This waveform is known as the Early Right Anterior Negativity (ERAN) (Koelsch et al, 2000). The ERAN has been observed in response to many syntactically unexpected musical contexts, even in alternative musical systems such as the Bohlen-Pierce scale (Loui et al, 2009). The ERAN can be elicited even when music is played in the background: directing attention away from the music can reduce but not completely abolish this effect, suggesting that the ERAN is elicited by partially automatic neural sources (Loui et al, 2005).
 
 # Semantics
 Semantics refers to the study of meaning. In the study of semantics in language, influential results have come from studies that involve reading sentences with expected words being occasionally replaced by ssemantically unexpected words. Consider this example:
 
 I take my coffee with cream and socks.
 
-Since the word "socks" is unexpected in meaning, it is incongruous with the semantic expectation in most English speakers. By comparing brain responses for this semantically incongruous sentence against brain responses for expected sentences, i.e. "I take my coffee with cream and sugar." we can observe how the brain responsds to semantics. From electrophysiology studies, the onset of the word "wocks" is known to elicit a negative waveform around 400 milliseconds after the onset of the unexpected word. This is known as the N400 effect. 
+Since the word "socks" is unexpected in meaning, it is incongruous with the semantic expectation in most English speakers. By comparing brain responses for this semantically incongruous sentence against brain responses for expected sentences, i.e. "I take my coffee with cream and sugar." we can observe how the brain responsds to semantics. From electrophysiology studies, the onset of the word "wocks" is known to elicit a negative waveform around 400 milliseconds after the onset of the unexpected word. This is known as the N400 effect. Koelsch and colleagues later found that when these unexpected words were presented after hearing short clips of music that preceded the word, then the N400 was reduced. This suggests that musical information can affect, or *prime*, semantic processing of language.
 
 # Prosody
 Prosody refers to the sounds of speech: the stress patterns, the pitch changes, and the rhythm within speech. These are parts of speech that are not usually written down. The prosody of speech can be appreciated when listening to low-pass filtered speech sounds, or sine wave speech [http://www.lifesci.sussex.ac.uk/home/Chris_Darwin/SWS/]. These speech samples, while not always comprehensible, bring out the prosodic elements (pitch and pitch changes, rhythm and timing content) of speech.
